# NemoHub

./: .gitignore  NemoHub.py  README.md  deploy.py  launch.bat  launch.sh  pyproject.toml  setup.iss  update.bat
app/: assets.py  config.py  drop.py  easy.py  fingerprint.py  license.py  login.py  proxy.py  settings.py  tasks.py  utils.py
resource/: resource.qrc
resource/ui/: LoginWindow.ui
translations/: compile_translations.py  nemohub_zh_CN.ts  update_translations.py
